--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     </article>
 </section>
 <!--reach out section-->
-<section>
-    <h2>Reach Out</h2>
+<section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.7348909764214!2d-74.67743574967263!3d40.72385224472697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c39750756b0485%3A0x5aae54a3b305dd1a!2s15%20Brook%20Hollow%20Rd%2C%20Gladstone%2C%20NJ%2007934!5e0!3m2!1sen!2sus!4v1623689766552!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe> 
