--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css/style.css" />
+    
 </head>
 <body>
 <!--navigation-->
@@ -167,7 +168,7 @@
 <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-        <a href="#">Read Our Privacy Policy</a>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a>
         <br/>
         &copy; 2019 Run Buddy, Inc.
     </div>
