--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
 </section>
 <!--Meet the trainers section"-->
-<section id="your-trainers">
+<section id="your-trainers" class="trainers">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
-    <article>
+    <article class="trainer">
         <img src="assets\images\trainer-1.jpg" alt="Aaron Stephens in his workout clothes, ready to pump iron"/>
         <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
+            <h3>Aaron Stephens</h3>
             <h4>Speed / Strength</h4>
             <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
@@ -147,22 +147,23 @@
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.7348909764214!2d-74.67743574967263!3d40.72385224472697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c39750756b0485%3A0x5aae54a3b305dd1a!2s15%20Brook%20Hollow%20Rd%2C%20Gladstone%2C%20NJ%2007934!5e0!3m2!1sen!2sus!4v1623689766552!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe> 
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br/>
+                Some Town, Ca <br/>
+                12345<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </div>
-    <div>
-        <h3>Run Buddy</h3>
-        <p>
-        Any questions or concerns before signing up?
-        <br />
-        Let us know and we'll be happy to talk to you!
-        </p>
-        <address>
-            55 Main Street <br/>
-            Some Town, Ca <br/>
-            12345<br />
-            P: 555.RUN.BUDZ (555.786.2839)<br/>
-            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-        </address>
-    </div>
+    
 </section>
 <!--footer-->
 <footer>
