--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.7348909764214!2d-74.67743574967263!3d40.72385224472697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c39750756b0485%3A0x5aae54a3b305dd1a!2s15%20Brook%20Hollow%20Rd%2C%20Gladstone%2C%20NJ%2007934!5e0!3m2!1sen!2sus!4v1623689766552!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
         </iframe> 
+        <div class="contact-form">
+            <h3>Contact Us</h3>
+            <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name" />
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+            <button type="submit">Submit</button>
+            </form>
+        </div>
         <div>
             <h3>Run Buddy</h3>
             <p>
